added css and images

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Coding Fresh</title>
 </head>
 <body>
     <h1>Coding Fresh</h1>
     <h3>Welcome to our grocery store!</h3>
-    <p>Coding Fresh is the best fresh grocery store in Townsville.
+    <p id="description">Coding Fresh is the best fresh grocery store in <a href="https:www.chicago.gov/city/en.html">Townsville</a>.
         We offer a wide selection of locally grown produce and organic products.
     </p>
     <ul>
-        <li>Apples</li>
-        <li>Grapes
-        <li>Kale</li>
+        <li><a href="https://farmersmarketla.com/"><img src="images/ja-ma--gOUx23DNks-unsplash.jpg" alt=""></a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Broccoli"><img src="images/annie-spratt-m1t-RJ1iCIU-unsplash.jpg" alt=""></a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Bell_pepper"><img src="images/honza-vojtek-A39EqNtDpZs-unsplash.jpg" alt=""></a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Carrot"><img src="images/michael-c-qrdbYqxnets-unsplash.jpg" alt=""></a></li>
     </ul>
     <h3>Contact us!</h3>
     <form>
